--- a/edit_profile(copy).html
+++ b/edit_profile(copy).html
@@ -4,7 +4,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Ribbons Dashboard | Wedding Registry, Bridal Registry &amp; Wedding Gifts</title>
 
@@ -26,11 +27,12 @@
      <!--  Fonts and icons     -->
      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
      
-     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900" rel="stylesheet"> 
      
      <link href="https://res.cloudinary.com/dzomirrk1/raw/upload/v1531083483/cvii/themify-icons.css" rel="stylesheet">
 
 </head>
+
 <body>
 
 <div class="wrapper">
