--- a/accounts.html
+++ b/accounts.html
@@ -25,7 +25,7 @@
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900" rel="stylesheet"> 
     
     <link href="https://res.cloudinary.com/dzomirrk1/raw/upload/v1531083483/cvii/themify-icons.css" rel="stylesheet">
 
