--- a/myeventdetails.html
+++ b/myeventdetails.html
@@ -128,10 +128,10 @@
                     <div class="row">
                         <div class="col-md-12">
 
-                            <div class="headert pull-right">
+                            <!-- <div class="headert pull-right">
                                 <p>Share:   <i class="ti-email"></i>  
                                 Download:  <i class="ti-download"></i></p>
-                            </div>
+                            </div> -->
 
                             <div class="header">
                                 <h3 class="title" style="color:#f9508c; font-weight:bold;">#EbForever Event Details:</h3>
@@ -139,18 +139,22 @@
                         </div>
                     </div>
 
-                            <br>
+                <br>
                             
                 <div class="content">
 
                     <div class="row">
 
                         <div class="col-md-4 typo-line">
-                            <h5><p class="category">Event Date:</p> 22/05/2018 </h5>
+                            <h5><p class="category">Event Date:</p> <br> 22/05/2018 </h5> <br>
                         </div>
 
                         <div class="col-md-4 typo-line">
-                            <h5><p class="category">Event Type:</p>Wedding </h5>
+                            <h5><p class="category">Event Type:</p> <br>  Wedding </h5> <br>
+                        </div>
+
+                        <div class="col-md-4 typo-line">
+                            <h5><p class="category">Days To Event:</p> <br>   <strong>100 days</strong> </h5> <br>
                         </div>
 
                         <!-- <div class="col-md-4 typo-line">
