--- a/myevents.html
+++ b/myevents.html
@@ -84,7 +84,7 @@
                 
                 <li class="dropdown">
                     
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href="mycompany.html" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="ti-world"></i>
                         <p>My Company  <b class="caret"></b></p>
                     </a>
