--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="card" style="text-align: center;">
                             <br>
                     
-                            <a href="">
+                            <a href="calendar.html">
                                 <img src="assets/img/calendar.png" style="width:20%; padding-bottom: 5px;" class="center">        
                                 <h3>Calendar</h3>
                                 <p style="color: black">See your bookings & schedule at a glance</p>
