--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             
                             <br>
                             
-                            <a href="">
+                            <a href="companywebsite.html">
                                 <img src="assets/img/domain-registration.png"  style="width:20%; padding-bottom: 5px;" class="center">
                                 <!-- <button class="btn btn-primary btn-fill centera">Edit Your Profile</button> -->
                                 <h3>Company Website</h3>
