--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="card" style="text-align: center;">
                             <br>
                     
-                            <a href="">
+                            <a href="myvendors.html">
                                 <img src="assets/img/bakery-vendor.png" style="width:20%; padding-bottom: 5px;" class="center">        
                                 <h3>Vendor Management</h3>
                                 <p style="color: black">Manage Your Vendors </p>
