--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="card" style="text-align: center;">
                             <br>
                     
-                            <a href="">
+                            <a href="marketing.html">
                                 <img src="assets/img/megaphone.png" style="width:20%; padding-bottom: 5px;" class="center">        
                                 <h3>Marketing</h3>
                                 <p style="color: black">Create targeted guest marketing here</p>
