--- a/myeventdetails.html
+++ b/myeventdetails.html
@@ -42,12 +42,12 @@
 
             <ul class="nav">
                 
-                <li class="active">
+                <!-- <li class="active">
                     <a href="index.html">
                         <i class="ti-panel"></i>
                         <p>Overview</p>
                     </a>
-                </li>
+                </li> -->
                 
                 <!-- <li>
                     <a href="createtemplates.html">
@@ -130,10 +130,10 @@
                     <div class="row">
                         <div class="col-md-12">
 
-                            <!-- <div class="headert pull-right">
+                            <div class="headert pull-right">
                                 <p>Share:   <i class="ti-email"></i>  
                                 Download:  <i class="ti-download"></i></p>
-                            </div> -->
+                            </div>
 
                             <div class="header">
                                 <h3 class="title" style="color:#f9508c; font-weight:bold;">#EbForever Event Details:</h3>
